tdf#157572 tdf#112287 tdf#154129 writerfilter framePr: fix vAnchor default

Fixes LO 7.6 regression commit 630732bfd8ed531e9d412a36a083f33763def054

See bug 157572 for the documentation.

To test this, I used ooxmlexport5's tdf112287B.docx with Word 2010:
-changed vertical relative to Paragraph - exported w:vAnchor="text"
-changed vertical relative to Page - exported w:vAnchor="page"
-changed vertical relative to Margin - did not export w:vAnchor

So, obviously the default is "margin"

Note that it always exports w:y=1

For importing, the default vAnchor changed depending on whether
w:y=0 (text) or w:y=1 (margin)
* an exception is when w:y=0 and vAlign is defined - then 'margin'

make CppunitTest_sw_ooxmlexport5 \
    CPPUNIT_TEST_NAME=testTdf157572_defaultVAnchor

Change-Id: I126094eafc43a83e3a4efdd1ebc8d9cab9d49759
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157527
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins